Compliments functionality added
Compliments functionality added.
Console Log clean ups
code beutify

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <title>Mirror</title>
+    <title>piMirror</title>
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
@@ -12,6 +12,7 @@
     <script src="js/time/time.js"></script>
     <script src="js/weather/weather.js"></script>
     <script src="js/geoservices/geo.js"></script>
+    <script src="js/compliments/compliments.js"></script>
 </head>
 
 <body>
@@ -25,6 +26,10 @@
         <i class="wi wi-na"></i>
         </div>
         <div id=Temp></div>
+        <div id= daySummary></div>
+    </div>
+    <div class= "bottom">
+        <div id= "compliment"></div>
     </div>
 </div>
 
