--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="js/weather/weather.js"></script>
     <script src="js/geoservices/geo.js"></script>
     <script src="js/compliments/compliments.js"></script>
+    <script src="js/news/news.js"></script>
 </head>
 
 <body>
@@ -30,6 +31,9 @@
     </div>
     <div class= "bottom">
         <div id= "compliment"></div>
+        <div id= "news">
+            <marquee><pre>Loading News</pre></marquee>
+        </div>
     </div>
 </div>
 
