Bing Maps integration
Switching over to bing maps rather than Google maps as it is a more
powerful api
Maps framework ready and built. awaiting annyang integration

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" type="text/css" href="css/weather-icons.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.4.0/annyang.min.js"></script>
-   <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
    
     <script src="js/main.js"></script>
     <script src="js/config.js"></script>
@@ -46,16 +45,15 @@
 
 </div>
 
-
+<div class="container">
     <div class="center">
         <div id="frame">
-            <p>Desc</p> 
+            <img id = "framePic" src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif" style="width:300px;height:250px;">
         </div>
         <div id=desc>
-           <p>Desc</p> 
+           <p id=trafficInfo></p> 
         </div>
-        
     </div>
-
+</div>
 </body>
 </html>
