--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <div class="container">
     <div class="center">
         <div id="frame">
-            <img id = "framePic" src="https://d13yacurqjgara.cloudfront.net/users/82092/screenshots/1073359/spinner.gif" style="width:300px;height:250px;">
+            <img id = "framePic" src="black.png" style="width:300px;height:250px;">
         </div>
         <div id=desc>
            <p id=trafficInfo></p> 
