--- a/index.html
+++ b/index.html
@@ -18,14 +18,30 @@
     <script src="js/news/news.js"></script>
     <script src="js/voice/voicecontrol.js"></script>
     <script src="js/traffic/maps.js"></script>
+    <script src="js/music/music.js"></script>
     
 </head>
 
 <body>
+    <audio id="audio"></audio>
 <div class= "top">
     <div class= "top-left">
         <div id=Date></div>
         <div id=time></div>
+        <div class=social>
+            <div class=icons>
+                <div id=FBicon>
+                    <img src="resources/facebookIcon.png" style="width:30px;height:30px;">
+                </div>
+                <div id=emailicon>
+                    <img src="resources/emailIcon.png" style="width:30px;height:30px;">
+                </div>
+                <div id=calendaricon>
+                    <img src="resources/calendarIcon.png" style="width:30px;height:30px;">
+
+                </div>
+            </div>
+        </div>
     </div>
     <div class= "top-right">
         <div id= wIcon>
@@ -48,7 +64,7 @@
 <div class="container">
     <div class="center">
         <div id="frame">
-            <img id = "framePic" src="black.png" style="width:300px;height:250px;">
+            <img id = "framePic" src="resources/black.png" style="width:300px;height:250px;">
         </div>
         <div id=desc>
            <p id=trafficInfo></p> 
