--- a/index.html
+++ b/index.html
@@ -38,18 +38,21 @@
                 </div>
                 <div id=calendaricon>
                     <img src="resources/calendarIcon.png" style="width:30px;height:30px;">
-
                 </div>
             </div>
         </div>
+            <div id= albumArt>
+                <img id="art">
+            </div>
     </div>
     <div class= "top-right">
         <div id= wIcon>
         <i class="wi wi-na"></i>
         </div>
-        <div id=Temp></div>
+        <div id= Temp></div>
         <div id= daySummary></div>
     </div>
+
     <div class= "bottom">
         <div id= "compliment"></div>
         <div id= "news">
