--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    
     <script src="js/main.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/globalUtilities"></script>
+    <script src="js/globalUtilities.js"></script>
     <script src="js/time/time.js"></script>
     <script src="js/weather/weather.js"></script>
     <script src="js/geoservices/geo.js"></script>
@@ -19,6 +19,9 @@
     <script src="js/voice/voicecontrol.js"></script>
     <script src="js/traffic/maps.js"></script>
     <script src="js/music/music.js"></script>
+    <script src="js/userServices/userServices.js"></script>
+    
+
     
 </head>
 
