calendar framework built, in dev

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <script src="js/traffic/maps.js"></script>
     <script src="js/music/music.js"></script>
     <script src="js/userServices/userServices.js"></script>
+    <script src="js/social/ical_parser.js"></script>
+    <script src="js/social/calendar.js"></script>
+    <script src="js/social/moment.js"></script>
     
 
     
