Server to client connection buff
Settings are now loaded into main on user login
literally added magic

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.4.0/annyang.min.js"></script>
    
+   <script src="js/config.js"></script>
     <script src="js/main.js"></script>
-    <script src="js/config.js"></script>
     <script src="js/globalUtilities.js"></script>
     <script src="js/time/time.js"></script>
     <script src="js/weather/weather.js"></script>
@@ -35,7 +35,7 @@
         <div id=Date></div>
         <div id=time></div>
         <div class=social>
-            <div class=icons>
+            <!--<div class=icons>
                 <div id=FBicon>
                     <img src="resources/facebookIcon.png" style="width:30px;height:30px;">
                 </div>
@@ -46,6 +46,10 @@
                     <img src="resources/calendarIcon.png" style="width:30px;height:30px;">
                 </div>
             </div>
+            <div class=datalist>
+                
+            </div>-->
+            TEST
         </div>
             <div id= albumArt>
                 <img id="art">
@@ -80,5 +84,7 @@
         </div>
     </div>
 </div>
+
+
 </body>
 </html>
