calendar parsing, license

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class= "top-left">
         <div id=Date></div>
         <div id=time></div>
-        <div class=social>
+        <div id=social>
             <!--<div class=icons>
                 <div id=FBicon>
                     <img src="resources/facebookIcon.png" style="width:30px;height:30px;">
@@ -48,8 +48,11 @@
             </div>
             <div class=datalist>
                 
+            </div>
+            <div id=event	color=white font-size= 15px font-style= oblique height= 25px width= 275px float= left>
+                <p class="eventName">Event name</p>
+                <p class="eventDate">00/00/0000</p>
             </div>-->
-            TEST
         </div>
             <div id= albumArt>
                 <img id="art">
