--- a/users.html
+++ b/users.html
@@ -62,6 +62,12 @@
             <input type="checkbox" name="avoid_highways" value="highways"> Highways<br>
             <input type="checkbox" name="avoid_tolls" value="tolls"> Tolls<br>
          <input type="submit" value="Submit">
+         
+         <h4>Calendar Events</h4>
+         <i>Place your Calendar ICAL Link Here. Your Calendar link does not need to be shared publically (Google)</i>.<br>
+         <i>Please note: As of now only one link can be parsed. This feature is in early development and will support multiple links soon!</i>.<br>
+
+         ICAL Link:<input type="text" name="ICAL">     <i>(Tested with Google Calendar and early testing with IOS)</i>
       </form>
       
    </body>
