Cal now used in user logins

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id=time></div>
         <div id=social></div>
             <div id= albumArt>
-                <img id="art">
+                <img id="art" style="border-radius: 25px;">
             </div>
     </div>
     <div class= "top-right">
@@ -61,7 +61,7 @@
 <div class="container">
     <div class="center">
         <div id="frame">
-            <img id = "framePic" src="resources/black.png" style="width:300px;height:250px;">
+            <img id = "framePic" src="resources/black.png" style="width:300px;height:250px;border-radius: 30px;">
         </div>
         <div id=desc>
            <p id=trafficInfo></p> 
